Automatically format code